--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.7.1"
   },
+  "engines": {
+    "node": "18.12.1"
+  },
   "devDependencies": {
     "@types/react": "17.0.18",
     "autoprefixer": "^10.3.1",
