--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "NODE_OPTIONS=--openssl-legacy-provider && next dev",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider && next build",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider && next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "cross-env": "^7.0.3",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.7.1"
-  },
-  "engines": {
-    "node": "18.12.1"
   },
   "devDependencies": {
     "@types/react": "17.0.18",
